--- a/Templates/reminders.html
+++ b/Templates/reminders.html
@@ -1,24 +1,24 @@
-
-<div class="container" >
-    <div class="row" >
-        <div class="col-md-6" ng-repeat="reminder in reminders">
-            <div class="card" style="width: 25rem;">
-                <div class="card-body">
-                  <h5 class="card-title">{{reminder.reminder}}</h5>
-                  <h6 class="card-subtitle mb-2 text-muted">{{reminder.timeForReminder}}</h6>
-                  <p class="card-text">{{reminder.dateForReminder}}</p>
-                  <button type="button" class="btn btn-success">Edit</button>
-                  <button type="button" class="btn btn-danger">Delete</button>
-                  <button type="button" class="btn btn-info">More details</button>
-                </div>
-              </div>
+<div class="container">
+  <p class="lead" style="text-align: center; padding: 25px; " >
+    Lists of reminders
+  </p>
+  <div class="row">
+    <div class="col-md-6" ng-repeat="reminder in reminders">
+      <div class="card" style="width: 25rem;">
+        <div class="card-body">
+          <h5 class="card-title">{{reminder.reminder}}</h5>
+          
+          <h6 class="card-subtitle mb-2 text-muted"><i class="bi bi-watch"></i> {{reminder.dateForReminder.substr(11,5)}}</h6>
+         
+          <p class="card-text"><i class="bi bi-calendar-event"></i> {{reminder.dateForReminder.substr(0,10)}}</p>
+          <button type="button" class="btn btn-success">Edit</button>
+          <button type="button" class="btn btn-danger">Delete</button>
+          <button type="button" class="btn btn-info" >More details</button>
         </div>
-        
+      </div>
+      <br><br>
     </div>
-    <br>
+
+  </div>
+  <br>
 </div>
-
-
-
-
-
