--- a/Templates/reminders.html
+++ b/Templates/reminders.html
@@ -18,6 +18,8 @@
       </div>
       <br><br>
     </div>
+  </div>
+  <div class="row">
     <div class="col-md-6">
       <nav aria-label="Page navigation example">
         <ul class="pagination">
